@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2006-09-18	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-80-03-instance-00-19-module-01:
+	  This child branch intended to refactor the module class to 
+		work like a process_definition (nullary_template)
+		and reuse the same functionality.
+	  This revision only changed the module.h header, and does not compile.
+
+
 2006-09-11	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-80-03-instance-00-19-merged-template-02:
